# SearLLM

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  searxng-settings.yml  squid.conf.example
backend/: .env.example  Dockerfile  __init__.py  config.yaml  pyproject.toml  requirements.txt  setup.py
backend/src/: app.py  cli_util.py  configuration.py  graph.py  llm.py  state.py  structs.py  tools.py  utils.py  websearch_cli.py
backend/src/agent/: graph.py  llm.py  state.py  tools.py
backend/src/agent/prompts/: answerer.md  web_searcher.md
backend/src/api/: app.py  config.yml  temp.py
backend/src/backend/: config.yml  utils.py
backend/src/backend/agent/: __init__.py  configuration.py  graph.py  llm.py  state.py  structs.py  tools.py  utils.py
backend/src/backend/agent/prompts/: __init__.py  answerer.md  loader.py  query_writer.md  reflector.md  search_result_proccessor.md  (+1 more)
backend/src/backend/api/: __init__.py  app.py  client.py  config.yml  exceptions.py  request_handler.py  structs.py  temp.py
backend/src/backend/database/: __init__.py  base.py  config.yml  setup_db.py
backend/src/backend/integrations/: cli_util.py
backend/src/backend/security/: utils.py
backend/src/integrations/: cli_util.py
backend/src/integrations/telegram/: bot.py  bot_inline.py  temp.py
backend/src/prompts/: laoder.py  loader.py  query_writer.md  search_result_proccessor.md  web_searcher.md
backend/tests/: generate_token.py  models.py  region_test.py  test.py
(+45 files in other folders)
