[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
dependencies = [
    "langchain-community",
    "langgraph",
    "langchain[openai]",
    "langchain-core",
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-dotenv",
    "pyyaml",
    "python-box",
    "python-telegram-bot",
]

[tool.setuptools.packages.find]
where = ["src"]